--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-aigbb",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "AI GBB Scaffolding Tool",
   "homepage": "https://github.com/dbroeglin/generator-aigbb",
   "author": {
@@ -8,6 +8,7 @@
     "email": "dominique.broeglin@microsoft.com",
     "url": "https://dominique.broeglin.fr"
   },
+  "type": "module",
   "files": [
     "generators"
   ],
@@ -21,24 +22,25 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "yeoman-test": "^1.7.0",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-xo": "^0.46.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.4.2",
     "yeoman-assert": "^3.1.1",
-    "eslint": "^6.6.0",
-    "prettier": "^1.19.1",
-    "husky": "^3.0.9",
-    "lint-staged": "^9.4.3",
-    "eslint-config-prettier": "^6.6.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-config-xo": "^0.27.2",
-    "jest": "^26.1.0"
+    "yeoman-test": "^10.0.1"
   },
   "engines": {
     "npm": ">= 4.0.0"
   },
   "dependencies": {
-    "yeoman-generator": "^3.1.1",
-    "chalk": "^2.1.0",
-    "yosay": "^2.0.2"
+    "chalk": "^5.3.0",
+    "yeoman-generator": "^7.3.3",
+    "yo": "^5.0.0",
+    "yosay": "^3.0.0"
   },
   "jest": {
     "testEnvironment": "node"
