--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
 			"installBicep": true,
 			"version": "latest"
 		},
+    "ghcr.io/devcontainers/features/github-cli:1": {},
 		"ghcr.io/rchaganti/vsc-devcontainer-features/azurebicep:1": {},
 		"ghcr.io/azure/azure-dev/azd:0": {
 			"version": "stable"
