--- a/generators/app/templates/azure.yaml
+++ b/generators/app/templates/azure.yaml
@@ -4,11 +4,11 @@ hooks:
   postprovision:
     windows:
       shell: pwsh
-      run: $output = azd env get-values; Add-Content -Path .env -Value $output;
+      run: .\scripts\postprovision.ps1
       interactive: true
       continueOnError: false
     posix:
       shell: sh
-      run: azd env get-values > .env
+      run: ./scripts/postprovision.sh
       interactive: true
       continueOnError: false
