WIP: added auth, frontend app and backend app w/o infra

--- a/generators/app/templates/azure.yaml
+++ b/generators/app/templates/azure.yaml
@@ -1,12 +1,39 @@
 name: <%= solutionSlug %>
 services:
+<% if (withBackend) { -%>
+  backend:
+    language: python
+    project: src/backend
+    host: containerapp
+    docker:
+      path: ./Dockerfile
+<% } -%>
+<% if (withFrontend) { -%>
+  frontend:
+    language: python
+    project: src/frontend
+    host: containerapp
+    docker:
+      path: ./Dockerfile
+<% } -%>
 hooks:
-  postprovision:
-    windows:
-      shell: pwsh
-      run: .\scripts\postprovision.ps1
+  preprovision:
+  #  windows:
+  #    shell: pwsh
+  #    run: .\scripts\preprovision.ps1
+  #    interactive: true
+  #    continueOnError: false
+    posix:
+      shell: sh
+      run: ./scripts/preprovision.sh
       interactive: true
       continueOnError: false
+  postprovision:
+    # windows:
+    #   shell: pwsh
+    #   run: .\scripts\postprovision.ps1
+    #   interactive: true
+    #   continueOnError: false
     posix:
       shell: sh
       run: ./scripts/postprovision.sh
