--- a/generators/app/templates/pyproject.toml
+++ b/generators/app/templates/pyproject.toml
@@ -3,5 +3,9 @@ name = "<%= solutionPythonName %>"
 version = "<%= solutionVersion %>"
 description = "<%= solutionDescription %>"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.12"
+dependencies = [
+    "python-dotenv >=1.0.1,<1.2.0",
+    "ipykernel >=6.29.5,<7.0.0",
+    "ipywidgets >=8.1.5,<9.0.0",
+]
