--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "generators"
   ],
   "main": "generators/index.js",
+  "bin": {
+    "aigbb-generator-test": "bin/aigbb-generator-test.js"
+  },
   "keywords": [
     "generator",
     "ai",
@@ -30,6 +33,7 @@
     "@yeoman/types": "1.5.0",
     "chalk": "^5.3.0",
     "underscore.string": "^3.3.6",
+    "yeoman-environment": "^4.4.3",
     "yeoman-generator": "^7.4.0",
     "yosay": "^3.0.0"
   },
