FIX docker builds for L300

--- a/generators/app/templates/azure.yaml
+++ b/generators/app/templates/azure.yaml
@@ -9,6 +9,9 @@ services:
     docker:
       path: ./Dockerfile
       remoteBuild: true
+<% if (solutionLevel > 100) { -%>
+      context: ../..
+<% } -%>
 <% } -%>
 <% if (withFrontend) { -%>
   frontend:
@@ -18,6 +21,9 @@ services:
     docker:
       path: ./Dockerfile
       remoteBuild: true
+<% if (solutionLevel > 100) { -%>
+      context: ../..
+<% } -%>
 <% } -%>
 hooks:
   preprovision:
