--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "pexpect>=4.9.0",
+    "pytest-dependency>=0.6.0",
     "pytest>=8.3.4",
 ]
 
