--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "yeoman-generator": "^7.4.0",
     "yosay": "^3.0.0"
   },
+  "overrides": {
+    "ajv": "^8.17.1",
+    "whatwg-url": "^14.1.0"
+  },
   "devDependencies": {
     "yeoman-assert": "^3.1.1",
     "yeoman-test": "^10.0.1"
