--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "generator-aigbb"
+name = "generator-az-ai"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
