Adding parameterized tests for frontend/backend/package/github + fixes

--- a/generators/app/templates/pyproject.toml
+++ b/generators/app/templates/pyproject.toml
@@ -17,9 +17,11 @@ dependencies = [
 members = ["src/*"]
 # exclude = ["src/excluded-package"]
 
+<% if (withPackage) { -%>
 [tool.uv.sources]
 <%= packageSlug %> = { workspace = true }
 
+<% } -%>
 [tool.pytest.ini_options]
 #addopts = "-ra --cov"
 addopts = "-ra"
