--- a/generators/app/templates/.devcontainer/devcontainer.json
+++ b/generators/app/templates/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "image": "mcr.microsoft.com/devcontainers/python:3",
+    "image": "mcr.microsoft.com/devcontainers/python:<%- pythonVersion %>",
     "features": {
       "ghcr.io/devcontainers/features/azure-cli:1": {},
       "ghcr.io/azure/azure-dev/azd:0": {},
