--- a/generators/app/templates/azure.yaml
+++ b/generators/app/templates/azure.yaml
@@ -1,5 +1,7 @@
 # see https://learn.microsoft.com/en-us/azure/developer/azure-developer-cli/azd-schema
 name: <%- solutionSlug %>
+metadata:
+  template: <%- generatorId %>@<%- generatorVersion %>
 services:
 <% if (withBackend) { -%>
   backend:
